--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@prisma/client": "^5.2.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "express-async-errors": "^3.1.1"
+    "express-async-errors": "^3.1.1",
+    "mysql": "^2.18.1",
+    "prisma": "^5.2.0"
   }
 }
