--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "mysql": "^2.18.1",
-    "prisma": "^5.2.0"
+    "prisma": "^5.2.0",
+    "zod": "^3.22.2"
   }
 }
